--- a/styles.css
+++ b/styles.css
@@ -56,9 +56,15 @@ h2:first-of-type {
     margin-top: 1em;
 }
 
+form input{
+    margin-left: 2em;
+    margin-right: 2em;
+}
+
 input[type=number] {
     width: 4em;
-    margin-right: 2em;
+    margin-left: 1em;
+
 }
 
 
@@ -146,23 +152,6 @@ td {
 
 
 
-/*Footer*/
-
-footer button{
-    position: absolute;
-    bottom: 5px;
-    left: 50px;
-    text-align: center;
-    font-size: 0.9em;
-}
-
-#credit-hidden-window{
-    background: rgba(255, 255, 255, 0.64);
-    color: #000;
-    padding: 1em;
-    border-radius: 0.5em;
-    width: 50%;
-}
 
 
 
